load_locs and load_crops becomes load_locs

--- a/workflow/notebooks/filter_merge.ipynb
+++ b/workflow/notebooks/filter_merge.ipynb
@@ -29,7 +29,7 @@
     "import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ccount.blob.io import load_crops\n",
+    "from ccount.blob.io import load_blobs\n",
     "from ccount.blob.plot import show_rand_crops\n",
     "import ccount.blob.misc # for remove_edge_crops\n",
     "from ccount.blob.plot import flat2image"
@@ -82,9 +82,9 @@
     "    i+=1\n",
     "    print(i, fname)\n",
     "    if (i== 1):\n",
-    "        crops = load_crops(fname)\n",
+    "        crops = load_blobs(fname)\n",
     "    else:\n",
-    "        crop_ = load_crops(fname)\n",
+    "        crop_ = load_blobs(fname)\n",
     "        crops = np.vstack((crops, crop_))\n",
     "    print('merged crops:', crops.shape)"
    ]
