--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -24,8 +24,8 @@
     "sys.path.append(home+'/ccount/ccount/workflow/scripts/ccount/')\n",
     "from os.path import exists\n",
     "\n",
-    "from ccount.blob.io import load_locs, save_crops, load_crops\n",
-    "from ccount.blob.misc import crops_stat\n",
+    "from ccount.blob.io import load_blobs, save_crops, load_blobs\n",
+    "from ccount.blob.misc import get_label_statistics\n",
     "from ccount.clas.pca_tsne import pca_tsne\n",
     "\n",
     "from ccount.img.read_czi import read_czi, parse_image_obj\n",
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "locs = load_locs(loc_file)  # contains y,x,r in the first 3 columns\n",
+    "locs = load_blobs(loc_file)  # contains y,x,r in the first 3 columns\n",
     "locs = locs[0:500, :]\n",
     "print('only top 500 blobs kept', locs.shape)"
    ]
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "labeled = load_crops(out_name)"
+    "labeled = load_blobs(out_name)"
    ]
   },
   {
@@ -487,7 +487,7 @@
     }
    ],
    "source": [
-    "crops_stat(crops)"
+    "get_label_statistics(crops)"
    ]
   },
   {
