--- a/workflow/notebooks/tracking.ipynb
+++ b/workflow/notebooks/tracking.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "sys.path.append('/home/socolovsky_lab/ccount/ccount/workflow/scripts/')\n",
-    "from ccount.blob.io import load_crops, save_crops\n",
+    "from ccount.blob.io import load_blobs, save_crops\n",
     "from ccount.blob.area_calculation import area_calculation\n",
     "from ccount.blob.misc import parse_crops"
    ]
@@ -592,7 +592,7 @@
     "for n, i in zip(df.columns[locs[1]], df.index[locs[0]]):\n",
     "    print(n, i)\n",
     "    file = 'res/classification1/pos/area/' + n + '.area.npy.gz'\n",
-    "    crops = load_crops(file)\n",
+    "    crops = load_blobs(file)\n",
     "    images, labels, rs = parse_crops(crops)\n",
     "    area_calculation(images[i], rs[i], plotting=True, fname= 'toobig/' + n + '.' + str(i) + '.png')\n"
    ]
@@ -669,7 +669,7 @@
     "for n, i in zip(df.columns[locs[1]], df.index[locs[0]]):\n",
     "    print(n, i)\n",
     "    file = 'res/classification1/pos/area/' + n + '.area.npy.gz'\n",
-    "    crops = load_crops(file)\n",
+    "    crops = load_blobs(file)\n",
     "    images, labels, rs = parse_crops(crops)\n",
     "    area_calculation(images[i], rs[i], plotting=True, fname= 'toosmall/' + n + '.' + str(i) + '.png')\n"
    ]
@@ -716,7 +716,7 @@
     "## too big\n",
     "file = \"res/classification1/pos/area/CRE_1A_NO_EPO_1.0.area.npy.gz\"\n",
     "i = 0\n",
-    "crops = load_crops(file)\n",
+    "crops = load_blobs(file)\n",
     "images, labels, rs = parse_crops(crops)\n",
     "area_calculation(images[i], rs[i], plotting=True)"
    ]
@@ -762,7 +762,7 @@
    "source": [
     "file = \"res/classification1/pos/area/T2_1D_POINT5_EPO_1.3.area.npy.gz\"\n",
     "i = 0\n",
-    "crops = load_crops(file)\n",
+    "crops = load_blobs(file)\n",
     "images, labels, rs = parse_crops(crops)\n",
     "area_calculation(images[i], rs[i], plotting=True)"
    ]
