--- a/workflow/notebooks/viewing_blobs.ipynb
+++ b/workflow/notebooks/viewing_blobs.ipynb
@@ -178,8 +178,8 @@
    "outputs": [],
    "source": [
     "# load\n",
-    "image_flat_crops = load_blobs_db(in_name)\n",
-    "w = int(sqrt(image_flat_crops.shape[1]-6)) # padding width & cropped img width/2"
+    "crops = load_blobs_db(in_name)\n",
+    "w = int(sqrt(crops.shape[1]-6)) # padding width & cropped img width/2"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_ = image_flat_crops[:,2]\n",
+    "r_ = crops[:,2]\n",
     "plt.hist(r_, 40)\n",
     "plt.show()"
    ]
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_rand_crops(crops=image_flat_crops, label_filter=1, num_shown=5)"
+    "show_rand_crops(crops=crops, label_filter=1, num_shown=5)"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_rand_crops(crops=image_flat_crops, label_filter=0, num_shown=5)"
+    "show_rand_crops(crops=crops, label_filter=0, num_shown=5)"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_rand_crops(crops=image_flat_crops, label_filter=-2, num_shown=5)"
+    "show_rand_crops(crops=crops, label_filter=-2, num_shown=5)"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_rand_crops(crops=image_flat_crops, label_filter=\"na\", num_shown=1)"
+    "show_rand_crops(crops=crops, label_filter=\"na\", num_shown=1)"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crops = image_flat_crops\n",
+    "crops = crops\n",
     "#crops = crops[crops[:, 3] >= 0, :]  # remove unlabeled\n",
     "blobs_stat(crops)"
    ]
