--- a/workflow/notebooks/visualize_area_calculation.ipynb
+++ b/workflow/notebooks/visualize_area_calculation.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "#import ccount\n",
-    "from ccount.blob.io import load_crops, save_crops\n",
+    "from ccount.blob.io import load_blobs, save_crops\n",
     "from ccount.blob.area_calculation import area_calculations, area_calculation\n",
     "import sys, subprocess, os\n",
     "import numpy as np\n",
@@ -41,7 +41,7 @@
     "#fname=\"./res/classification1/pos/S0B1_FIRST_SCAN-Stitching-18.0.crops.clas.npy.gz\"\n",
     "fname=\"./res/classification1/pos/S1CONT2_SECOND_SCAN-Stitching-07.2.crops.clas.npy.gz\"\n",
     "\n",
-    "crops = load_crops(fname)"
+    "crops = load_blobs(fname)"
    ]
   },
   {
