--- a/workflow/notebooks/edge_detector_dev.ipynb
+++ b/workflow/notebooks/edge_detector_dev.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ccount.blob.io import load_crops\n",
+    "from ccount.blob.io import load_blobs\n",
     "from ccount.blob.plot import show_rand_crops\n",
     "from ccount.blob.misc import remove_edge_crops\n",
     "import ccount.blob.misc\n",
@@ -109,9 +109,9 @@
     "    i+=1\n",
     "    print(i, fname)\n",
     "    if (i== 1):\n",
-    "        crops = load_crops(fname)\n",
+    "        crops = load_blobs(fname)\n",
     "    else:\n",
-    "        crop_ = load_crops(fname)\n",
+    "        crop_ = load_blobs(fname)\n",
     "        crops = np.vstack((crops, crop_))\n",
     "    print('merged crops:', crops.shape)"
    ]
