--- a/workflow/trash/blob_detection.ipynb
+++ b/workflow/trash/blob_detection.ipynb
@@ -227,7 +227,7 @@
     "    \n",
     "    ## find blobs\n",
     "    print(\">>> Detecting blobs after equalization\")\n",
-    "    image_flat_crops = find_blobs_and_crop(\n",
+    "    crops = find_blobs_and_crop(\n",
     "        image, image_equ,\n",
     "        crop_width=crop_width, \n",
     "        # blob_detection parameters\n",
@@ -245,7 +245,7 @@
     "else:\n",
     "    ## find blobs on original photo\n",
     "    print(\">>> Detecting blobs without equalization\")\n",
-    "    image_flat_crops = find_blobs_and_crop(\n",
+    "    crops = find_blobs_and_crop(\n",
     "        image, image,\n",
     "        crop_width=crop_width, \n",
     "        # blob_detection parameters\n",
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "## Histogtam of radius\n",
-    "r_ = image_flat_crops[:,2]\n",
+    "r_ = crops[:,2]\n",
     "plt.hist(r_, 40)\n",
     "plt.title(\"Histogram of blob size\")\n",
     "plt.show()"
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "## show randome blobs from all blobs\n",
-    "show_rand_crops(crops=image_flat_crops, label_filter='na', num_shown=5, \n",
+    "show_rand_crops(crops=crops, label_filter='na', num_shown=5, \n",
     "               blob_extention_ratio=blob_extention_ratio, blob_extention_radius=blob_extention_radius)"
    ]
   },
@@ -293,7 +293,7 @@
    "outputs": [],
    "source": [
     "## show blobs of specific sizes\n",
-    "filtered_blobs = filter_blobs(blobs=image_flat_crops, r_min=80, r_max=80)\n",
+    "filtered_blobs = filter_blobs(blobs=crops, r_min=80, r_max=80)\n",
     "r_ = filtered_blobs[:,2]\n",
     "plt.hist(r_, 40)\n",
     "plt.title(\"Histogram of filtered blob size\")\n",
@@ -315,9 +315,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('there are {} blobs detected'.format(len(image_flat_crops)))\n",
-    "print(image_flat_crops.shape)\n",
-    "np.save(detected_dbname, image_flat_crops)\n",
+    "print('there are {} blobs detected'.format(len(crops)))\n",
+    "print(crops.shape)\n",
+    "np.save(detected_dbname, crops)\n",
     "print('saved into {}'.format(detected_dbname))"
    ]
   },
