--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -25,7 +25,7 @@
     "from os.path import exists\n",
     "\n",
     "from ccount.blob.io import load_blobs, save_crops, load_blobs\n",
-    "from ccount.blob.misc import get_label_statistics\n",
+    "from ccount.blob.misc import get_blob_statistics\n",
     "from ccount.clas.pca_tsne import pca_tsne\n",
     "\n",
     "from ccount.img.read_czi import read_czi, parse_image_obj\n",
@@ -487,7 +487,7 @@
     }
    ],
    "source": [
-    "get_label_statistics(crops)"
+    "get_blob_statistics(crops)"
    ]
   },
   {
