blob_utils first round clean up

--- a/workflow/trash/blob_detection.ipynb
+++ b/workflow/trash/blob_detection.ipynb
@@ -227,7 +227,7 @@
     "    \n",
     "    ## find blobs\n",
     "    print(\">>> Detecting blobs after equalization\")\n",
-    "    crops = find_blobs_and_crop(\n",
+    "    crops = find_blobss_and_crop(\n",
     "        image, image_equ,\n",
     "        crop_width=crop_width, \n",
     "        # blob_detection parameters\n",
@@ -245,7 +245,7 @@
     "else:\n",
     "    ## find blobs on original photo\n",
     "    print(\">>> Detecting blobs without equalization\")\n",
-    "    crops = find_blobs_and_crop(\n",
+    "    crops = find_blobss_and_crop(\n",
     "        image, image,\n",
     "        crop_width=crop_width, \n",
     "        # blob_detection parameters\n",
