fix imports in count.Snakefile

--- a/workflow/notebooks/edge_detector_dev.ipynb
+++ b/workflow/notebooks/edge_detector_dev.ipynb
@@ -20,11 +20,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ccount.blob.io import load_blobs\n",
-    "from ccount.blob.plot import show_rand_crops\n",
-    "from ccount.blob.misc import remove_edge_crops\n",
-    "import ccount.blob.misc\n",
-    "from ccount.blob.plot import flat2image"
+    "from ccount_utils.blob import load_blobs\n",
+    "from ccount_utils.blob import show_rand_crops\n",
+    "from ccount_utils.blob import remove_edge_crops\n",
+    "import ccount_utils.blob\n",
+    "from ccount_utils.blob import flat2image"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "source": [
     "\n",
     "\n",
-    "crops_clean, crops_bad = ccount.blob.misc.remove_edge_crops(crops[0:1000, :])\n",
+    "crops_clean, crops_bad = ccount_utils.blob.remove_edge_crops(crops[0:1000, :])\n",
     "print(len(crops_clean), len(crops_bad))"
    ]
   },
@@ -252,8 +252,8 @@
    "source": [
     "from importlib import reload  \n",
     "\n",
-    "reload(ccount.blob.misc)\n",
-    "crops_clean, crops_bad = ccount.blob.misc.remove_edge_crops(crops[0:1000, :])\n",
+    "reload(ccount_utils.blob)\n",
+    "crops_clean, crops_bad = ccount_utils.blob.remove_edge_crops(crops[0:1000, :])\n",
     "print(len(crops_clean), len(crops_bad))"
    ]
   },
