--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -24,13 +24,13 @@
     "sys.path.append(home+'/ccount/ccount/workflow/scripts/ccount/')\n",
     "from os.path import exists\n",
     "\n",
-    "from ccount.blob.io import load_blobs, save_crops, load_blobs\n",
-    "from ccount.blob.misc import get_blob_statistics\n",
+    "from ccount_utils.blob import load_blobs, save_crops, load_blobs\n",
+    "from ccount_utils.blob import get_blob_statistics\n",
     "from ccount.clas.pca_tsne import pca_tsne\n",
     "\n",
-    "from ccount.img.read_czi import read_czi, parse_image_obj\n",
-    "from ccount.blob.crop_blobs import crop_blobs\n",
-    "from ccount.blob.plot import plot_flat_crop, plot_flat_crops, pop_label_flat_crops, show_rand_crops\n",
+    "from ccount_utils.img import read_czi, parse_image_obj\n",
+    "from ccount_utils.blob import crop_blobs\n",
+    "from ccount_utils.blob import plot_flat_crop, plot_flat_crops, pop_label_flat_crops, show_rand_crops\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
