--- a/workflow/notebooks/visualize_area_calculation.ipynb
+++ b/workflow/notebooks/visualize_area_calculation.ipynb
@@ -8,14 +8,14 @@
    "outputs": [],
    "source": [
     "#import ccount\n",
-    "from ccount.blob.io import load_blobs, save_crops\n",
-    "from ccount.blob.area_calculation import area_calculations, area_calculation\n",
+    "from ccount_utils.blob import load_blobs, save_crops\n",
+    "from ccount_utils.blob import area_calculations, area_calculation\n",
     "import sys, subprocess, os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from ccount.blob.plot import show_rand_crops\n",
-    "from ccount.blob.misc import parse_crops"
+    "from ccount_utils.blob import show_rand_crops\n",
+    "from ccount_utils.blob import parse_crops"
    ]
   },
   {
