--- a/workflow/notebooks/filter_merge.ipynb
+++ b/workflow/notebooks/filter_merge.ipynb
@@ -29,10 +29,10 @@
     "import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ccount.blob.io import load_blobs\n",
-    "from ccount.blob.plot import show_rand_crops\n",
-    "import ccount.blob.misc # for remove_edge_crops\n",
-    "from ccount.blob.plot import flat2image"
+    "from ccount_utils.blob import load_blobs\n",
+    "from ccount_utils.blob import show_rand_crops\n",
+    "import ccount_utils.blob # for remove_edge_crops\n",
+    "from ccount_utils.blob import flat2image"
    ]
   },
   {
@@ -132,8 +132,8 @@
    "outputs": [],
    "source": [
     "from importlib import reload  \n",
-    "reload(ccount.blob.misc)\n",
-    "crops_clean, crops_bad = ccount.blob.misc.remove_edge_crops(crops)\n",
+    "reload(ccount_utils.blob)\n",
+    "crops_clean, crops_bad = ccount_utils.blob.remove_edge_crops(crops)\n",
     "print(len(crops_clean), len(crops_bad), round(len(crops_bad)/len(crops), 2))"
    ]
   },
