--- a/workflow/notebooks/tracking.ipynb
+++ b/workflow/notebooks/tracking.ipynb
@@ -11,9 +11,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "sys.path.append('/home/socolovsky_lab/ccount/ccount/workflow/scripts/')\n",
-    "from ccount.blob.io import load_blobs, save_crops\n",
-    "from ccount.blob.area_calculation import area_calculation\n",
-    "from ccount.blob.misc import parse_crops"
+    "from ccount_utils.blob import load_blobs, save_crops\n",
+    "from ccount_utils.blob import area_calculation\n",
+    "from ccount_utils.blob import parse_crops"
    ]
   },
   {
