--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -109,7 +109,7 @@
    ],
    "source": [
     "# show file names of all blobs that needs to be labeled\n",
-    "%ls ./res/classification1/pos/\n",
+    "%ls ./res/count/pos/\n",
     "%ls ./data/"
    ]
   },
@@ -134,7 +134,7 @@
       "plate_name: S0A1_FIRST_SCAN-Stitching-24\n",
       "image_index: 2\n",
       "czi_file: ./data/S0A1_FIRST_SCAN-Stitching-24.czi True\n",
-      "loc_file: ./res/classification1/pos/S0A1_FIRST_SCAN-Stitching-24.2.crops.clas.npy.gz True\n"
+      "loc_file: ./res/count/pos/S0A1_FIRST_SCAN-Stitching-24.2.crops.clas.npy.gz True\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
     "czi_file = './data/' + czi_name\n",
     "print('czi_file:', czi_file, exists(czi_file))\n",
     "\n",
-    "loc_file = './res/classification1/pos/' + name + '.crops.clas.npy.gz'  \n",
+    "loc_file = './res/count/pos/' + name + '.crops.clas.npy.gz'  \n",
     "print('loc_file:', loc_file, exists(loc_file))\n",
     "\n",
     "out_name = name + '.labeled.npy.gz'"
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./res/classification1/pos/S0A1_FIRST_SCAN-Stitching-24.2.crops.clas.npy.gz (35, 25606)\n",
+      "./res/count/pos/S0A1_FIRST_SCAN-Stitching-24.2.crops.clas.npy.gz (35, 25606)\n",
       "only top 500 blobs kept (35, 25606)\n"
      ]
     }
