ccount-env to c-count-env

--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/socolovsky_lab/mambaforge/envs/ccount-env/lib/python3.8/site-packages/scipy/__init__.py:143: UserWarning: A NumPy version >=1.19.5 and <1.27.0 is required for this version of SciPy (detected version 1.19.2)\n",
+      "/home/socolovsky_lab/mambaforge/envs/c-count-env/lib/python3.8/site-packages/scipy/__init__.py:143: UserWarning: A NumPy version >=1.19.5 and <1.27.0 is required for this version of SciPy (detected version 1.19.2)\n",
       "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "/home/socolovsky_lab/mambaforge/envs/ccount-env/lib/python3.8/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "/home/socolovsky_lab/mambaforge/envs/c-count-env/lib/python3.8/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
       "  \"class\": algorithms.Blowfish,\n"
      ]
     }
@@ -610,9 +610,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ccount-env",
+   "display_name": "c-count-env",
    "language": "python",
-   "name": "ccount-env"
+   "name": "c-count-env"
   },
   "language_info": {
    "codemirror_mode": {
