--- a/workflow/notebooks/tracking.ipynb
+++ b/workflow/notebooks/tracking.ipynb
@@ -777,9 +777,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ccount-env",
+   "display_name": "c-count-env",
    "language": "python",
-   "name": "ccount-env"
+   "name": "c-count-env"
   },
   "language_info": {
    "codemirror_mode": {
